feat(api): rotas /api/db/docs
